fix:error of connecting the .CSS file

--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style src="style.css" type="stylesheet"></style>
+    <link href="./style.css" rel="stylesheet"></link>
     </head>
 <body>
-    <div class="hello">Hello world</div>
-    <div style="padding-top:100.000%;position:relative;"><iframe src="https://gifer.com/embed/ZlXk" width="100%" height="100%" style='position:absolute;top:0;left:0;' frameBorder="0" allowFullScreen></iframe></div><p><a href="https://gifer.com"></a></p>
-</body>
+    <div id="hello">Hello world</div>
+    
+     <p>
+   <iframe src="https://gifer.com/embed/6bye" width=480 height=366.742 frameBorder="0" allowFullScreen></iframe></p>
+    </body>
 </html>
