feat: add basic html css structure

--- a/index.html
+++ b/index.html
@@ -1,16 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link href="./style.css" rel="stylesheet"></link>
-    </head>
+    <title>cv</title>
+    <link rel="icon" href="favicon.ico">
+    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./assets/styles/normalize.css">
+</head>
+
 <body>
-    <div id="hello">Hello world</div>
-    
-     <p>
-   <iframe src="https://gifer.com/embed/6bye" width=480 height=366.742 frameBorder="0" allowFullScreen></iframe></p>
-    </body>
+    <div class="cv">
+        <div class="head-cv">
+            <div class="name">
+                <p id="first-name">Роман</p>
+                <p id="family-name">Гамеза</p>
+                <p id="patronymic">Владимирович</p>
+            </div>
+            <div class="avatar">
+                <img src="./assets/img/avatar.png" alt="no images">
+            </div>
+        </div>
+        <div class="body-cv">
+            <div class="history">
+                <div class="date">2022</div>
+                <div class="content">Белорусский Национальный Технический Университет по специальности
+                    "Инженер-конструктор-дизайнер упаковочного производства"</div>
+            </div>
+            <div class="info">
+                <div class="info-container">
+                    <h3 class="info-title">About me</h3>
+                    <p class="info-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam animi maiores molestias necessitatibus quo impedit, cum doloremque. Maiores porro sapiente deserunt distinctio alias expedita exercitationem!</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</body>
+
 </html>
